# bazel-terraform-rules

./: .gitignore  .tarignore  BUILD  README.md  WORKSPACE  def.bzl  deps.bzl  go.mod  go.sum  providers.bzl  repositories.bzl
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  devcontainer.yml  release.yml  semgrep.yml  test_devcontainer.yml
examples/alternatepath/: BUILD
examples/combined_macro/: BUILD
examples/constants/: BUILD
examples/consumer/: BUILD  main.tf
examples/consumer_relative/: BUILD
examples/multimodule/: BUILD
examples/provider/: BUILD  main.tf
examples/terragrunt_basic/: BUILD.bazel  terragrunt.hcl
examples/terragrunt_basic/source/: BUILD.bazel
examples/transitive/: BUILD  transitive.tf
examples/transitive_relative/: BUILD
examples/vars/: BUILD  main.tf  variables.tf
modules/alternatepath/: BUILD  output.tf
modules/constants/: BUILD
modules/consumer/: BUILD  main.tf
modules/consumer_relative/: BUILD  main.tf
modules/multimodule/: BUILD
modules/provider/: BUILD  main.tf
modules/terragrunt_basic/: BUILD.bazel
modules/transitive/: BUILD  transitive.tf
modules/transitive_relative/: BUILD  transitive.tf
modules/vars/: BUILD
newrule/: BUILD  newrule.bzl
rules/: module.bzl  provider.bzl  terraform.bzl  terragrunt.bzl
terraform/: versions.bzl
terragrunt/: versions.bzl
test/constants/: BUILD.bazel  constants_test.go
test/modules/: BUILD.bazel  modules_test.go
tests/allow_provider_download/: BUILD  test.sh
tests/backend_init/: BUILD  main.tf  test.sh
tests/combined_macro/: BUILD  main.tf  test.sh
tests/modify_module_dir/: BUILD  main.tf  test.bzl
tests/module_with_providers/: BUILD  test.sh
tests/older_terraform_versions/: BUILD  main.tf  test.sh  tests.bzl
toolchains/terraform/: BUILD.terraform  BUILD.toolchain  toolchain.bzl  versions.bzl
toolchains/terragrunt/: BUILD.terragrunt  (+3 more)
tools/: def.bzl  toolchains.bzl
tools/getreleases_terragrunt/: BUILD.bazel  main.go
(+39 files in other folders)
