load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "modules_test",
    srcs = ["modules_test.go"],
    data = [
        "//modules/constants",
        "//modules/consumer",
        "@terraform_toolchain//:terraform_executable",
    ],
    tags = [
        "no-sandbox",
    ],
    deps = [
        "//test/utils",
        "@com_github_gruntwork_io_terratest//modules/terraform",
    ],
)
