load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "getreleases_lib",
    srcs = ["main.go"],
    importpath = "tfmodules/tools/getreleases",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "getreleases_terragrunt",
    embed = [":getreleases_lib"],
    visibility = ["//visibility:public"],
)
